Reworked latex layout

--- a/documentation/milepael6/latex/rapport.tex
+++ b/documentation/milepael6/latex/rapport.tex
@@ -16,7 +16,7 @@
 \setcounter{page}{1}
 
 \input{sections/intro.tex}
-\input{sections/solution.tex}
+\input{sections/solution/solution.tex}
 \input{sections/alternatives.tex}
 
 \end{document}
