Wrote some stuff about user groups

--- a/documentation/milepael6/latex/sections/intro.tex
+++ b/documentation/milepael6/latex/sections/intro.tex
@@ -1,3 +1,6 @@
 \section{Introduksjon}
 
 \subsection{Brukergruppe}
+Vår tiltenkte brukergruppe består av . Dette kan være folk som har nytte av globale studier til sitt arbeid som forskere, bachelor- og master-studenter, og journalister, men også folk med generell interesse for studiene. Det sagt, 
+
+
