--- a/documentation/milepael6/latex/sections/solution/columnfamily.tex
+++ b/documentation/milepael6/latex/sections/solution/columnfamily.tex
@@ -30,14 +30,14 @@ Første dataframe som skal lastes opp til Cassandra er rådataen. Dette er grunn
 
 Når timesData.csv leses inn i Spark-Shell, brukes \lstinline{inferSchema} til å automatisk generere skjema basert på dataen i datasettet. Her er det bare viktig å passe på at alle datatypene stemmer, siden Spark ofte gjetter feil. I tillegg brukes \lstinline{confirm.truncate} og \lstinline{Overwrite} til å overskrive eksisterende data i Cassandra. Dersom det er ønskelig å laste opp rad for rad, kan \lstinline{Append} brukes i stedet. Til slutt lastes inn datasettet fra Cassandra som blir brukt til de resterende komponentene.
 
-\subsubsection{Skoler med ekstrem kjønnsfordeling}
+\subsubsection{Aggregeringer til kjønnsfordeling på skoler}
 Alle aggregeringene opprettes og bearbeides i spark-shell før de blir lastet opp til Cassandra. Fra tidligere kodesnutt brukes \lstinline{newUniversityDf} til å lage aggregeringene, men dette er helt vilkårlig, det går fint ann å jobbe direkte på den opprinnelige dataframen.
 
 Legg merke til bruken av \lstinline{orderBy}. I designet til nettsiden er det tenkt at komponenten skal vise top ti skoler med høyest kvinnefordeling sortert i synkende rekkefølge, men etter å ha laget denne aggregeringen oppsto det et problem. Det viser seg at kolonnefamiliedatabaser ikke tar hensyn til sortering, bortsett fra at de fremstilles i alfabetisk rekkefølge. På grunn av dette har ikke \lstinline{orderBy} eller \lstinline{sort} noen effekt etter at aggregeringen har blitt lastet opp til Cassandra. Dette kan imidlertid løses ved at enten spark eller businesslogikken tar hensyn til sorteringen når den vises fram på nettsiden.
 
 \code{Scala}{code/populateCassandraFemaleRatio.scala}
 
-Samsvarende aggregering for menn:
+Tilsvarende aggregering for menn:
 
 \code{Scala}{code/populateCassandraMaleRatio.scala}
 
@@ -45,3 +45,8 @@ Samsvarende aggregering for menn:
 Den siste aggregeringen tar for seg den gjennomsnittlige totalpoengsummen hvert år i datasettet. Vært å merke er at det gjøres ingen handlinger på selve aggregeringen før den lastes opp til databasen, da \lstinline{averageSorePerYear} lagrer kun en liste over transformasjoner som skal gjøres på dataframen. Dersom variabelen hadde inkludert \lstinline{.show()}, som er en handling, ville hver enkel transformasjon eksekveres etter hverandre.
 
 \code{Scala}{code/populateCassandraAverageScorePerYear.scala}
+
+\subsubsection{Hvordan nettsiden henter data}
+Det finnes mange måter å håndtere uthenting på, men siden nettsiden må kunne lese dataen, var det logisk å gjøre om til \textit{Json} format. I ettertid ser vi at det hadde vært mer logisk å lage et eget Json objekt i Scala, men istedet lagres de direkte som Json filer i systemet.
+
+\code{Scala}{code/websiteCassandra.scala}
