--- a/documentation/milepael6/latex/sections/solution/joins.tex
+++ b/documentation/milepael6/latex/sections/solution/joins.tex
@@ -11,9 +11,7 @@ Id-ene i tabellen må ha fnutter("") for at de ikke skal bli lowercase.
 Det er viktig å vite hvordan å bruke disse to forskjellige metode-typene i scala. Det viktigste er å huske at transformeringer vil forklare hva slags endringer man ønsker på hvordan data ser ut og presenteres, samt hva som hentes ut, mens handlinger vil faktisk utføre en linje kode og lagre en kopi av den ferdigbehandlede dataen. Transformeringer gjør altså ingenting før en handling kalt. Handlinger er da altså noe som vil gjøre noe med dataen, f.eks. gjøre aggregeringer eller flytte data fra et sted til et annet. 
 
 
-Det finnes fire kategorier for transformeringer og handlinger:
-
-
+Det finnes fire kategorier for transformeringer og handlinger:\newline
 Generelle, matematiske/statistiske, Set teori/relasjonelle og Datastruktur/I/O
 
 
