Added section for SAN vs NAS

--- a/documentation/milepael6/latex/sections/solution/solution.tex
+++ b/documentation/milepael6/latex/sections/solution/solution.tex
@@ -1,4 +1,5 @@
 \section{Løsning}
 
+\input{sections/solution/san.tex}
 \input{sections/solution/columnfamily.tex}
 \input{sections/solution/joins.tex}
