First commit on doc

--- a/documentation/milepael6/latex/sections/solution/solution.tex
+++ b/documentation/milepael6/latex/sections/solution/solution.tex
@@ -1,5 +1,6 @@
 \section{Løsning}
 
+\input{sections/solution/databases.tex}
 \input{sections/solution/san.tex}
 \input{sections/solution/columnfamily.tex}
 \input{sections/solution/joins.tex}
