--- a/documentation/latex/sections/milepael2/raw.tex
+++ b/documentation/latex/sections/milepael2/raw.tex
@@ -41,11 +41,11 @@ I prosjektet vårt har vi bestemt oss for å bruke ETCD, siden ETCD prioriterer 
 \subsection{Design av nøkkel}
 På grunn av måten vi velger å oppdatere eksisterende data i databasen, blir nøklene designet på en måte som skiller mellom komponenter og ny studentdata. Komponentene er JSON-objektene som brukes til å vise data på nettsiden, mens studentdataen er rådata som er nyttig for å holde dataen oppdatert. Hvis en student legges til eller oppdateres, oppdateres også komponentene i databasen. Den generelle strukturen på nøkkelen vil derfor være et prefiks for inndeling, etterfulgt av kolon, etterfulgt av navn eller id.
 
-Verdier relatert til komponenter vil ha en nøkkel med prefiks «component» etterfulgt av navnet på komponenten. Eksempel på en nøkkel for en komponent i vår KV-store:
+Verdier relatert til komponenter vil ha en nøkkel med prefiks "component" etterfulgt av navnet på komponenten. Eksempel på en nøkkel for en komponent i vår KV-store:
 
   component:studentByFreeTime
 
-Verdier relatert til studenter vil ha nøkler med prefiks «student» etterfulgt av en 8-sifret id av typen Integer. Eksempel på en nøkkel for en student i vår KV-store:
+Verdier relatert til studenter vil ha nøkler med prefiks "student" etterfulgt av en 8-sifret id av typen Integer. Eksempel på en nøkkel for en student i vår KV-store:
 
   student:02381225
 
@@ -63,7 +63,7 @@ En av grunnene til at dataen vil være lett tilgjengelig med få kall, er at den
 
 Ved første innlastning av nettsiden må den gjøre noen kall til databasen slik at den kan vise data på nettsiden. Siden det er 7 komponenter i denne nettsiden, har vi valgt å lagre hver komponent for seg i KV-store. Grunnen til dette er fordi hver komponent er ganske omfattende, og vi vil heller gjøre noen ekstra kall enn å laste et stort dataobjekt for hver oppdatering. Derfor blir det umiddelbart 7 kall mot KV-store når siden lastes inn.
 
-Dersom vi ikke hadde designet dataen på denne måten, ville vi støtet på et problem dersom kun noen få studenter oppdateres. For eksempel med «averageGradesByStudyHours» komponentet i et datasett med 100 studenter, der 1 student endret verdi:
+Dersom vi ikke hadde designet dataen på denne måten, ville vi støtet på et problem dersom kun noen få studenter oppdateres. For eksempel med "averageGradesByStudyHours" komponentet i et datasett med 100 studenter, der 1 student endret verdi:
 
 \begin{itemize}
   \item Hente alle studentobjekter fra databasen
@@ -73,3 +73,56 @@ Dersom vi ikke hadde designet dataen på denne måten, ville vi støtet på et p
 \end{itemize}
 
 Det første steget ville bruke 100 kall, en for hver student, det tredje og fjerde steget er to kall. Til sammen blir dette 102 kall. Men siden vi har strukturert databasen ettersom, vil vi kunne minske dette tallet betraktelig. Med samme eksempel som over, her er måten vi gjør det på:
+
+\begin{itemize}
+  \item Hente gammelt student-objekt fra KV-store
+  \item Hente komponent med key=component:averageGradesByStudyHours
+  \item Oppdatere dataen i komponentet i koden ved å gjøre beregninger
+  \item Lagre oppdatert komponentet i KV-store
+  \item Lagre oppdatert student-objekt i KV-store
+\end{itemize}
+
+Steg 1, 2, 4 og 5 gjør 1 kall hver, som betyr at her gjør vi kun 4 kall mot KV-store. Denne metoden vil også brukes for å oppdatere de resterende komponentene, som betyr at hver oppdatering er kun 4 kall.
+
+Det er viktig å punktere at samme metode vil også bli brukt dersom man oppdaterer data ved å laste 
+opp en ny CSV fil. Den eneste forskjellen her er at programmet må først dekonstruere CSV-en for å hente innholdet før man gjør kall mot databasen.
+
+\subsection{Hva om vi er dataeier?}
+Den største forskjellen for produktet vårt ville vært hvor korrekt dataen er, hvem som hadde kunne gjort endringer, og hvordan/når de endringene ville blitt gjort. Nå kan det legges til eller endres når som helst, og det brukes verdier som ikke helt passer opp mot verdier vi heller er vant med, eller verdier som ikke er dekker hele spekteret vi ser etter (foreldreutdanning skulle gjerne hatt 3 ekstra verdier for bachelor/høyere utdanning, master, og phd. f.eks.).
+
+Datasettet hadde mest sannsynlig da sett noe annerledes ut, og vært tilpasset våre behov. Dette betyr i hovedsak noe sammenslåing av kolonner, samt verdi endringer fra strenger til tall, eller andre grupperingsmetodikker.
+
+Siden dette er forskning/spørreundersøkelser og data som skal hentes inn fra sikre kilder, men i større volum av gangen, ville det da heller vært logisk å laste hele csv-filer av gangen kontra slik som det vil være nå som man kan legge inn en og en student i nettskjemaet. Selvfølgelig ville det også vært mulig dersom datasett endrer seg, men hele datasettet ville nok blitt lastet på nytt med sjekker om oppdatert data.
+
+Vi ville fremdeles ikke byttet til RIAK da dataen vi har er mest avhengig av konsistens, og trenger ikke noen spesielt høy grad av tilgjengelighet. Pga. dette vil lineære lese-spørringer i ETCD være bedre enn serialiserte spørringer i RIAK.
+
+\subsection{Dataobjektene}
+Denne seksjonen viser fram de forskjellige komponentene/dataobjektene med tilsvarende Json objekt og representasjon på nettsiden. Dette er for å illustrere hvordan vi ønsker at dataobjektene skal se ut. For hvert dataobjekt Vil det stå beskrevet hvordan data aggregeres, samt pseudo-kode på hvordan dataen hentes ut.
+
+\subsubsection{Rådata}
+\txt{code/milepael2/rawObject.json}
+Dette dataobjektet er en en-til-en representasjon av en rad i datasettet og representerer en student.
+
+\subsubsection{Dataobjekt 1}
+\txt{code/milepael2/averageGradesByStudyHours.json}
+Dette dataobjektet tar for seg den gjennomsnittlige karakteren for begge kjønn etter hvor mange timer de studerer i uken. Det er representert som et søylediagram i nettsiden. Her samler vi 4 grupper, en for hver tidsbergening, som hver splittes i to basert på kjønn, så regnes snitt-karakter.
+
+\subsubsection{Dataobjekt 2}
+\txt{code/milepael2/studentsByFreeTime.json}
+Her viser dataobjektet prosentvis hvor mye fritid studentene har. Studenter grupperes etter hvor mye fritid de har, henter kun ut hvor stor hver gruppe er, så regnes 
+det ut hvor stor hver gruppe er av totalen og prosent-verdien deres vises.
+
+\subsubsection{Dataobjekt 3}
+\txt{code/milepael2/averageGradesByParentEducation.json}
+Denne grafen tar for seg et dataobjekt som samler mors og fars utdanningsnivå og viser karakterene barna har. Her hentes studentenes karakterer ut og legges inn i en gruppe for mors utdanningnivå, og en gruppe for fars, så snittes karakterene innad i disse gruppene.
+
+\subsubsection{Dataobjekt 4}
+\txt{code/milepael2/freeTimeByStudyHours.json}
+Dette objektet viser hvor mye fritid studenter har i forhold til hvor mye de studerer. I dette dataobjektet må vi hente ut studenter i grupper etter hvor mye de jobber med skole på egen tid, og finner gjennomsnittet av hvor mye fritid de har på skalaen.
+
+\subsubsection{Dataobjekt 5}
+\txt{code/milepael2/familyRelationsAndAverageGradesByAlcohol.json}
+Dataobjektet viser hvor mye alkohol en student drikker(delt etter helg og hverdag), hvordan forholdet studenten har til familien sin er, og hvordan dette påvirker karakterene i gjennomsnitt. I dette objektet henter vi ut grupper på lignende måte som i dataobjekt 6. Vi skaper da også 5 hovedgrupper med 2 subgrupper hver, en for helg og en for ukedag, og i hver av disse gruppene legges karakter og familie forhold inn og det utregnes gjennomsnitt. 
+
+Denne aggregeringen vil ha mange operasjoner og vil være treg, men dataen har ikke noe særlig krav om å være lett tilgjengelig, eller at den må lastes spesielt fort, da det heller er viktig at dataen er korrekt.
+
