Connected all milepaeler, added reflection.tex, cleaned up folder structure

--- a/documentation/latex/rapport.tex
+++ b/documentation/latex/rapport.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt]{article}
-\input{sections/preamble.tex}
+\input{preamble.tex}
 \begin{document}
-\title{Big Data - Milepæl 6}
+\title{Big Data - Prosjekt}
 \author{Gruppe 13: Mats Engelien, Lars Erik Faber}
 \date{}
 \maketitle
@@ -21,5 +21,6 @@
 \input{sections/milepael4.tex}
 \input{sections/milepael5.tex}
 \input{sections/milepael6.tex}
+\input{sections/reflection.tex}
 
 \end{document}
