Added code files for milepael 3, added counter for each figure

--- a/documentation/latex/preamble.tex
+++ b/documentation/latex/preamble.tex
@@ -33,48 +33,25 @@
 % settings %
 \setcounter{secnumdepth}{3} % enumerate
 \setcounter{tocdepth}{3}    % TOC entries
-%\renewcommand{\contentsname}{Innholdsfortegnelse}
-\newcounter{frcounter}
-\newcounter{frsubcounter}[frcounter]
-\newcounter{nfrcounter}
-\newcounter{nfrsubcounter}[nfrcounter]
+\renewcommand{\contentsname}{Innholdsfortegnelse}
 \titlespacing*{\paragraph}{\parindent}{1ex}{1em}
 
+% counters %
+\newcounter{figurecounter}
+
 % commands %
-    % counters %
-\newcommand*{\FR}{\stepcounter{frcounter}\textbf{[FR-\arabic{frcounter}] \quad}}
-\newcommand*{\FRsub}{\stepcounter{frsubcounter}\textbf{[FR-\arabic{frcounter}.\arabic{frsubcounter}] \quad}}
-\newcommand*{\NFR}{\stepcounter{nfrcounter}\textbf{[NFR-\arabic{nfrcounter}] \quad}}
-\newcommand*{\NFRsub}{\stepcounter{nfrsubcounter}\textbf{[NFR-\arabic{nfrcounter}.\arabic{nfrsubcounter}] \quad}}
-\newcommand{\invis}{\phantom{a}}
+\newcommand*{\FigureCounter}{\stepcounter{figurecounter}\textit{Figur \arabic{figurecounter}}}
+\newcommand{\txt}[1]{\FigureCounter\begin{shaded}\lstinputlisting[language={}]{#1}\end{shaded}}
+\newcommand{\code}[2]{\FigureCounter\begin{shaded}\lstinputlisting[language=#1]{#2}\end{shaded}}
 
-    % requirement commands %
-\newcommand*{\freq}[1]{\FR\textbf{#1}\\}
-\newcommand*{\fsubreq}[1]{\FRsub{#1}\\}
-\newcommand*{\nfreq}[1]{\NFR\textbf{#1}\\}
-\newcommand*{\nfsubeq}[1]{\NFRsub{#1}\\}
-\newcommand{\txt}[1]{\begin{shaded}\lstinputlisting[language={}]{#1}\end{shaded}}
-\newcommand{\code}[2]{\begin{shaded}\lstinputlisting[language=#1]{#2}\end{shaded}}
-
-    % colors %
-\newcommand{\cellr}{\cellcolor{red!25}}
-\newcommand{\cello}{\cellcolor{orange!25}}
-\newcommand{\celly}{\cellcolor{yellow!25}}
-\newcommand{\celll}{\cellcolor{lime!25}}
-\newcommand{\cellg}{\cellcolor{green!25}}
-
+% colors %
 \definecolor{pblue}{rgb}{0.13,0.13,1}
 \definecolor{pgreen}{rgb}{0,0.5,0}
 \definecolor{pred}{rgb}{0.9,0,0}
 \definecolor{pgrey}{rgb}{0.46,0.45,0.48}
-% \definecolor{clientCode}{HTML}{fff6db}
 \definecolor{ccInner}{HTML}{edf3f5}
 \definecolor{ccFrame}{HTML}{f2eee4}
-
 \definecolor{shadecolor}{named}{ccFrame} 
-
-% environments %
-\newenvironment{subreq}{\begin{adjustwidth}{1cm}{}}{\end{adjustwidth}}
 
 % lstset %
 \lstset{
@@ -87,6 +64,6 @@
     commentstyle=\color{pgreen},
     keywordstyle=\color{pblue},
     stringstyle=\color{pred},
-    basicstyle=\footnotesize\ttfamily, % font-size
+    basicstyle=\footnotesize\ttfamily,
     moredelim=[is][\textcolor{pgrey}]{\%}{\%}
 }
