--- a/documentation/latex/sections/milepael3/raw.tex
+++ b/documentation/latex/sections/milepael3/raw.tex
@@ -1,1 +1,9 @@
 \section{Milepael 3}
+
+\subsection{Implementasjon av KV-database}
+I denne milepælen har vi implementert noen komponenter fra forrige milepæl via Scala og SBT.
+
+\subsection{Average Grades By Study Hours}
+\code{Scala}{code/milepael3/PostAvgGradesByStudyHoursFromCSV.scala}
+
+
