--- a/documentation/latex/sections/milepael3.tex
+++ b/documentation/latex/sections/milepael3.tex
@@ -1,1 +1,5 @@
-\input{sections/milepael3/raw.tex}
+\section{Milepæl 3}
+
+\input{sections/milepael3/kvImplementation.tex}
+\input{sections/milepael3/documentDatabaseDesign.tex}
+
