--- a/documentation/latex/sections/milepael1/raw.tex
+++ b/documentation/latex/sections/milepael1/raw.tex
@@ -55,6 +55,7 @@ Her er en skisse som viser hvordan forsiden kan se ut. Det vil være et søkefel
 
 Vi kan f.eks. vise anbefalte skoler basert på kjønnsfordeling eller hvilken land det lønner seg å søke jobb i.
 
+\FigureCounter
 \begin{figure}[H]
     \includegraphics[width=\textwidth]{images/milepael1/forsideBigdata.png}
 \end{figure}
