Partially implemented milepael 4

--- a/documentation/latex/sections/milepael4.tex
+++ b/documentation/latex/sections/milepael4.tex
@@ -1,1 +1,5 @@
-\input{sections/milepael4/raw.tex}
+\section{Milepæl 4}
+
+\input{sections/milepael4/documentDBImplementation.tex}
+\input{sections/milepael4/columnFamilyDesign.tex}
+\input{sections/milepael4/graphDBDesign.tex}
