Finished importing milepael 4

--- a/documentation/latex/rapport.tex
+++ b/documentation/latex/rapport.tex
@@ -15,12 +15,12 @@
 \newpage
 \setcounter{page}{1}
 
-\input{sections/milepael1.tex}
-\input{sections/milepael2.tex}
-\input{sections/milepael3.tex}
-\input{sections/milepael4.tex}
-\input{sections/milepael5.tex}
-\input{sections/milepael6.tex}
+\input{sections/milepael1/milepael1.tex}
+\input{sections/milepael2/milepael2.tex}
+\input{sections/milepael3/milepael3.tex}
+\input{sections/milepael4/milepael4.tex}
+\input{sections/milepael5/milepael5.tex}
+\input{sections/milepael6/milepael6.tex}
 \input{sections/reflection.tex}
 
 \end{document}
