--- a/documentation/latex/rapport.tex
+++ b/documentation/latex/rapport.tex
@@ -6,7 +6,7 @@
 \date{}
 \maketitle
 \begin{center}
-    \includegraphics[scale=0.5]{images/world_education.jpg}    
+    \includegraphics[width=\textwidth]{images/world_education.jpg}    
 \end{center}
 \thispagestyle{empty}
 \newpage
