Wrote about work deligation

--- a/documentation/latex/sections/reflection.tex
+++ b/documentation/latex/sections/reflection.tex
@@ -1,4 +1,14 @@
 \section{Refleksjonsnotat}
 \subsection{Arbeidsfordeling}
+Gjennom hele semesteret har begge to vært flinke til å fordele relativ lik mengde arbeid på hver milepæl. I tillegg, har vi prøvd å bytte på mellom dokumentasjon og programmering, slik at en ikke blir sittende med det samme hver gang.
+
+I milepæl 1 var det ingen programmering og her gjorde vi omtrent like mye, begge lagde skisser og dokumenterte planen vår for prosjektet. Det som er spesielt med milepæl 1, er at vi måtte omskrive hele milepælen før vi leverte inn prosjektet, siden vi hadde endret datasett. Vi gikk bort fra musikk-datasettene til studenter og sosio-økonomiske datasett den neste milepælen. Arbeidsfordelingen var lik på milepæl 2.
+
+Da milepæl 3 kom, tok vi ansvar for én deloppgave hver. Dette var greit, siden da kunne en av oss fokusere på koden, mens den andre på dokumentasjonen. Det som var fint er at i milepæl 4 skulle man implementere det man hadde designet i milepæl 3, så da passet det fint å bytte om på ansvaret, siden oppgavene i 3 og 4 var tilsvarende hverandre.
+
+I milepæl 5 skulle vi innføre datasettene våres i spark. Her var det naturlig at begge jobbet med de datasettene vi selv hadde designet. Mens på milepæl 6 delte vi oppgavene igjen, slik at Lars Erik gjorde deloppgave 1 og Mats gjorde deloppgave 2. Begge skrev i dokumentasjonen.
+
+Vi gjorde ikke milepæl 7 til fristen, men her tok Mats ansvaret for å innføre datasettene i Neo4j.
+
 \subsection{Hvordan har gruppearbeidet fungert}
 \subsection{Annet}
