Finished writing reflectation

--- a/documentation/latex/sections/reflection.tex
+++ b/documentation/latex/sections/reflection.tex
@@ -11,4 +11,4 @@ I milepæl 5 skulle vi innføre datasettene våres i spark. Her var det naturlig
 Vi gjorde ikke milepæl 7 til fristen, men her tok Mats ansvaret for å innføre datasettene i Neo4j.
 
 \subsection{Hvordan har gruppearbeidet fungert}
-\subsection{Annet}
+Gruppearbeit har fungert veldig bra. Begge to er gode venner og har god kommunikasjon med hverandre. Vi har også diskutert godt gjennom hele prosjektet og vært aktive i kurset. Det eneste å påpeke er at vi har vært litt sent ute med å begynne på hver milepæl, slik at annenhver helg går til Big Data.
