--- a/documentation/latex/sections/milepael5/milepael5.tex
+++ b/documentation/latex/sections/milepael5/milepael5.tex
@@ -1,1 +1,11 @@
 \input{sections/milepael5/raw.tex}
+\input{sections/milepael5/sections/leseSkrivePar.tex}
+\input{sections/milepael5/sections/studentPerformance.tex}
+
+\input{sections/milepael5/sections/countryProfiles.tex}
+
+\input{sections/milepael5/sections/worldUniRank.tex}
+
+\input{sections/milepael5/sections/graphDb.tex}
+
+\input{sections/milepael5/sections/hadoop.tex}
